--- a/public/css/scholarship_form.css
+++ b/public/css/scholarship_form.css
@@ -114,10 +114,32 @@
 	letter-spacing: 0.01em;
 }
 
-input[type=text], :not(.ajax-form) > textarea{
+input[type=text], input[type=date], :not(.ajax-form) > textarea{
 	border-radius: 0;
 	font-family: Roboto;
 	margin: 1em 0;
 	border: 0;
 	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+.deadline{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	margin: 1em 0;
+}
+
+.deadline label{
+	font-weight: normal;
+	margin: 0;
+	margin-right: 1em;
+	font-family: Roboto;
+}
+
+.deadline input{
+	margin: 0;
+}
+
+.file-label{
+	margin-left: 5.2em;
 }
