--- a/public/css/profile_page.css
+++ b/public/css/profile_page.css
@@ -36,7 +36,9 @@
 	margin-bottom: 1.5em;
 }
 
-.acc_settings{
+.acc_settings,
+.acc_settings + *{
+	margin: 0.25em;
 	box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
@@ -111,4 +113,9 @@
 
 .scholars{
 	margin-top: 2em;
+}
+
+.no-pending{
+	font-size: 1.5em;
+	color: #888;
 }
