--- a/public/css/scholarship_page.css
+++ b/public/css/scholarship_page.css
@@ -17,7 +17,7 @@
 	min-width: 10em;
 	max-width: 40em;
 	margin: auto;
-	text-align: justify;
+	text-align: center;
 	text-indent: 2em;
 	color: #666;
 }
