--- a/public/css/main.css
+++ b/public/css/main.css
@@ -353,7 +353,8 @@ form:not(.navbar-form) .input-group {
 /* SEARCH DESIGN */
 
 .search-results {
-    margin-top: 2em;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
     display: flex;
     flex-direction: column;
     padding: 0;
